# typewheel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  clippy.yml
src/: codec.rs  component.rs  content.rs  event.rs  iter.rs  key.rs  lib.rs  serial.rs  style.rs
src/codec/: json.rs  legacy.rs  mod.rs  plain.rs
src/iter/: mod.rs  tree.rs  visit.rs
tests/: common.rs  iter.rs  json.rs  serial.rs
typewheel_dsl/: Cargo.toml
typewheel_dsl/src/: parser.rs
typewheel_proc/: Cargo.toml
typewheel_proc/src/: lib.rs
