[package]
name = "typewheel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json"]

[dev-dependencies]
serde_test = "1.0.176"
